<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/register_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/username"
        />

    <EditText
        android:id="@+id/register_et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dip"
        android:text="@string/register"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/register_tv_already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/already_user" />

        <Button
            android:id="@+id/register_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/register_tv_already_user"
            android:layout_weight="1"
            android:text="@string/login" />


    </RelativeLayout>

</LinearLayout>

</LinearLayout>