<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/username"
        />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/login_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/login_tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/forgot_password"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dip"
        android:text="@string/login"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/login_tv_not_an_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_user_yet" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_toRightOf="@+id/login_tv_not_an_user"/>

    </RelativeLayout>


</LinearLayout>

</LinearLayout>