<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/forgot_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        style="@style/MyBlueTheme"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/forgot_et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/enter_email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/forgot_send_btn"
            style="@style/appiratorButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginBottom="10dp"/>



</LinearLayout>